# MyBsdiff

app/: build.gradle
app/src/androidTest/java/com/yu/mybsdiff/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/yu/mybsdiff/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/yu/mybsdiff/: ExampleUnitTest.java
demo/: app_1_0.apk  app_2_0.apk  patch  show.mov
gradle/wrapper/: gradle-wrapper.properties
